# convert-mp4-to-alpha-webm-with-rembg

./: .gitignore  README.md  main.py  pyproject.toml
video_webm_app/: gui.py  main.py  pipeline.py
